@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: Bug#130: Prolog arithmetic functions using rationals.  Koos Dering.
+
   * FIXED: Online manual index handling (double 'Overview').   
     Pierpaolo BERNARDI.
 
